re-add jei